[package]
name = "bookmark"
version = "0.1.0"
edition = "2018"
description = "bookmark directory path"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
clap = "2.33.0"