[package]
description = "bookmark directory path"
edition = "2018"
name = "bookmark"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.34.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
